fixed navbar alignment

--- a/src/Components/Nav/style.css
+++ b/src/Components/Nav/style.css
@@ -1,25 +1,35 @@
+button {
+  border: none;
+  background-color: rgb(242, 242, 247);
+}
+
 .navbar {
   width: 100%;
   background-color: rgb(242, 242, 247);
   font-family: "Rubik", sans-serif;
 }
 
+button,
 .nav-btn {
-  margin-left: 3px;
-  margin-right: 3px;
+  margin-left: 5px;
+  margin-right: 5px;
   color: rgb(72, 72, 74);
 }
 
-.nav-btn:active {
-  background-color: rgb(209, 209, 214);
-}
-
+button:hover,
 .nav-btn:hover {
   background-color: rgb(229, 229, 234);
 }
 
-.nav-btn:active,
-.nav-btn:hover {
+button:active,
+.nav-btn:active {
+  background-color: rgb(209, 209, 214);
+}
+
+button:hover,
+button:active,
+.nav-btn:hover,
+.nav-btn:active {
   border-radius: 10px 10px 10px 10px;
   color: rgb(72, 72, 74);
 }
@@ -46,15 +56,4 @@
   opacity: 1;
   transform: translateY(0px);
   transition: 0.5s ease all;
-}
-
-.dropdown-toggle-split {
-  color: rgb(174, 174, 178);
-}
-
-@media screen and (prefers-reduced-motion: no-preference) {
-  html,
-  body {
-    scroll-behavior: smooth;
-  }
 }
